<resources>
    <string name="app_name">FindOb</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="logout">logout</string>
    <string name="findobject">FindObject</string>
    <string name="find_missing_object_app">Find missing object app</string>
    <string name="hi_richard">Hi, Richard</string>
    <string name="find_see"><![CDATA[Find & See]]></string>
    <string name="find_and_see">find and see</string>
    <string name="find_missing_object">Find missing object</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="upload_image">Upload Image</string>
    <string name="inbox">Inbox</string>
    <string name="recently_missing">Recently Missing</string>
</resources>